it fix aboutPtext on mobile

--- a/src/stylesheet/index.css
+++ b/src/stylesheet/index.css
@@ -66,14 +66,13 @@ a.social-link {
 }
 
 h2.section-title {
-  font-size: 70px;
+  font-size: 50px;
   line-height: 1;
   font-weight: 900;
 }
 
 h2.section-title i {
   font-weight: 100;
-  padding: 0 20%;
 }
 
 @media (min-width: 641px) {
@@ -102,20 +101,37 @@ h2.section-title i {
 }
 
 p.description {
-  font-size: 40px;
+  font-size: 30px;
   padding: 0;
   margin: 0;
 }
 
 p.description.light {
   color: lightgrey;
+  text-align: center;
 }
 
 p.description.dark {
   color: inherit;
 }
 
-@media (min-width: 1025px) {
+p.description.dark p.description {
+  font-size: 30px;
+  padding: 0;
+  margin: 0;
+}
+
+p.description.dark p.description.light {
+  color: lightgrey;
+  text-align: center;
+}
+
+p.description.dark p.description.dark {
+  color: inherit;
+  text-align: center;
+}
+
+@media (min-width: 1024px) {
   h1, h2, h3 {
     font-size: 120px;
   }
@@ -131,6 +147,16 @@ p.description.dark {
   }
   h2.section-title i {
     font-weight: 100;
+    padding: 0;
+  }
+  p.description {
+    font-size: 40px;
+  }
+  p.description.light {
+    text-align: left;
+  }
+  p.description.dark {
+    text-align: left;
   }
 }
 
@@ -218,6 +244,18 @@ p.description.dark {
 
 #about, #work {
   padding: 5% 5%;
+  height: 100vh;
+  overflow: visible;
+}
+
+hr {
+  width: 30vw;
+}
+
+img {
+  display: block;
+  height: 50px;
+  margin: 0 auto;
 }
 
 /*Toggle Switch Dark light mode*/
@@ -278,6 +316,7 @@ a.nav-link.right {
   left: 0%;
   -webkit-transform: rotate(-90deg);
           transform: rotate(-90deg);
+  z-index: 100;
 }
 
 .main-nav ul {
@@ -350,7 +389,7 @@ a.right {
 }
 
 hr {
-  width: auto;
+  width: 30vw;
   float: right;
 }
 
@@ -379,6 +418,15 @@ hr {
   #toggle label > span.dark {
     width: 20px;
     height: 20px;
+  }
+  .row.projects {
+    margin: 10% 0;
+  }
+  #about .column {
+    margin: 5% 0;
+  }
+  hr {
+    width: 50vw;
   }
 }
 
